--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>resident evil</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <main>
+        <div class="passo">
+            <img src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
+            <p></p>
+            <button></button>
+            <button></button></div>
+    </main>
 </body>
 </html>
