--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <main>
         <div class="passo">
             <img src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
-            <p></p>
-            <button></button>
-            <button></button></div>
+            <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita, você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção subterrâneo, com a porta entreaberta.</p>
+            <button>A: Entrar pela porta da frente. É o caminho mais direto, mas também o mais exposto.
+</button>
+            <button>A: Entrar pela porta da frente. É o caminho mais direto, mas também o mais exposto.
+</button></div>
     </main>
 </body>
 </html>
