--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita, você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção subterrâneo, com a porta entreaberta.</p>
             <button>A: Entrar pela porta da frente. É o caminho mais direto, mas também o mais exposto.
 </button>
-            <button>A: Entrar pela porta da frente. É o caminho mais direto, mas também o mais exposto.
+            <button>B: Descer pela escada de serviço e entrar pelo túnel subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
 </button></div>
     </main>
 </body>
