--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <div class="passo ativo">
+        <div class="passo ativo" id="passo-0>
             <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
             <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita, você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção subterrâneo, com a porta entreaberta.</p>
             <button>A: Entrar pela porta da frente. É o caminho mais direto, mas também o mais exposto.
