--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>resident evil</title>
     <link rel="stylesheet" href="./estilo.css">
 </head>
+
 <body>
     <main>
-        <div class="passo ativo" id="passo-0>
+        <div class="passo ativo" id="passo-0">
             <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
-            <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita, você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção subterrâneo, com a porta entreaberta.</p>
-            <button>A: Entrar pela porta da frente. É o caminho mais direto, mas também o mais exposto.
-</button>
-            <button>B: Descer pela escada de serviço e entrar pelo túnel subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
-</button></div>
+            <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita,
+                você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção
+                subterrâneo, com a porta entreaberta.</p>
+            <button class="btn-proximo" data-proximo="1">A: Entrar pela porta da frente. É o caminho mais direto, mas
+                também o mais exposto.
+            </button>
+            <button class="btn-proximo" data-proximo="2">B: Descer pela escada de serviço e entrar pelo túnel
+                subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
+            </button>
+        </div>
+        <div class="passo" id="passo-1">
+            <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
+            <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita,
+                você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção
+                subterrâneo, com a porta entreaberta.</p>
+            <button class="btn-proximo" data-proximo="1">A: Entrar pela porta da frente. É o caminho mais direto, mas
+                também o mais exposto.
+            </button>
+            <button class="btn-proximo" data-proximo="2">B: Descer pela escada de serviço e entrar pelo túnel
+                subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
+            </button>
+        </div>
+        <div class="passo" id="passo-2">
+            <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
+            <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita,
+                você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção
+                subterrâneo, com a porta entreaberta.</p>
+            <button class="btn-proximo" data-proximo="1">A: Entrar pela porta da frente. É o caminho mais direto, mas
+                também o mais exposto.
+            </button>
+            <button class="btn-proximo" data-proximo="2">B: Descer pela escada de serviço e entrar pelo túnel
+                subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
+            </button>
+        </div>
     </main>
 </body>
+
 </html>
