--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita,
                 você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção
                 subterrâneo, com a porta entreaberta.</p>
-            <button class="btn-proximo" data-proximo="1">A: Entrar pela porta da frente. É o caminho mais direto, mas
+            <button class="btn-proximo" data-proximo="11">A: Entrar pela porta da frente. É o caminho mais direto, mas
                 também o mais exposto.
             </button>
-            <button class="btn-proximo" data-proximo="2">B: Descer pela escada de serviço e entrar pelo túnel
+            <button class="btn-proximo" data-proximo="12">B: Descer pela escada de serviço e entrar pelo túnel
                 subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
             </button>
         </div>
@@ -39,14 +39,14 @@
             <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita,
                 você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção
                 subterrâneo, com a porta entreaberta.</p>
-            <button class="btn-proximo" data-proximo="1">A: Entrar pela porta da frente. É o caminho mais direto, mas
+            <button class="btn-proximo" data-proximo="21">A: Entrar pela porta da frente. É o caminho mais direto, mas
                 também o mais exposto.
             </button>
-            <button class="btn-proximo" data-proximo="2">B: Descer pela escada de serviço e entrar pelo túnel
+            <button class="btn-proximo" data-proximo="22">B: Descer pela escada de serviço e entrar pelo túnel
                 subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
             </button>
         </div>
     </main>
 </body>
-
+<script src="./main.js"></script>
 </html>
