--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
         <div class="passo" id="passo-1">
             <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
-            <p> As portas de vidro reforçado estão estilhaçadas e uma escuridão palpável emana de dentro. À sua direita,
-                você nota uma escada de serviço de metal que desce para o que parece ser um túnel de manutenção
-                subterrâneo, com a porta entreaberta.</p>
+            <p> </p>
             <button class="btn-proximo" data-proximo="11">A: Entrar pela porta da frente. É o caminho mais direto, mas
-                também o mais exposto.
+                também o mais exposto.Se você escolheu A (Porta da Frente):
+Você passa pelos cacos de vidro e entra no lobby principal. A energia de emergência ilumina a cena com uma luz vermelha sinistra. Corpos em jalecos de laboratório estão espalhados pelo chão. Em um balcão de segurança, um monitor pisca, mostrando duas opções ativas: "Desativar Protocolo de Contenção de Segurança" ou "Acessar Registros de Áudio de Sobreviventes". Um gemido baixo ecoa de um corredor à frente.
+
             </button>
             <button class="btn-proximo" data-proximo="12">B: Descer pela escada de serviço e entrar pelo túnel
                 subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
