--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 Você passa pelos cacos de vidro e entra no lobby principal. A energia de emergência ilumina a cena com uma luz vermelha sinistra. Corpos em jalecos de laboratório estão espalhados pelo chão. Em um balcão de segurança, um monitor pisca, mostrando duas opções ativas: "Desativar Protocolo de Contenção de Segurança" ou "Acessar Registros de Áudio de Sobreviventes". Um gemido baixo ecoa de um corredor à frente.
 
             </button>
-            <button class="btn-proximo" data-proximo="12">B: Descer pela escada de serviço e entrar pelo túnel
-                subterrâneo. É um caminho mais furtivo, mas quem sabe o que se esconde na escuridão abaixo.
-            </button>
+            <button class="btn-proximo" data-proximo="12">B: 
+            </button>Se você escolheu B (Túnel Subterrâneo):
+Você desce pela escada fria e entra no túnel úmido. A água pinga das tubulações e o ar é pesado. Você encontra uma bifurcação. Um mapa na parede mostra que um caminho leva à "Sala do Gerador Principal" e o outro ao "Centro de Tratamento de 
         </div>
         <div class="passo" id="passo-2">
             <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
