--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
         </div>
         <div class="passo" id="passo-1">
-            <img class="img01" src="./bb872c06be9c79381ddc4ee499ab85bb.jpg" alt="">
+            <img class="img01" src="./Resident-Evil-2-PS1-door-loading-screen.avif" alt="">
             <p> </p>
             <button class="btn-proximo" data-proximo="11">A: Entrar pela porta da frente. É o caminho mais direto, mas
                 também o mais exposto.Se você escolheu A (Porta da Frente):
